syntax = "proto3";

option go_package = "./;proto";
package proto;

enum ServerInfo {
  ServerInfo_None = 0;
  ServerInfo_Port = 50051;
}

message GetExternalIpPortReq {
}

message GetExternalIpPortResp {
  string addr = 1;
  string network = 2;
}

message UDPAddr {
  string ip = 1;
  int32 port = 2;
  string zone = 3; // IPv6 scoped addressing zone
}

// The service definition.
service P2P{
  // 获取外网ip和端口
  rpc GetExternalIpPort (GetExternalIpPortReq) returns (GetExternalIpPortResp) {}
}